--- a/franske-course-information/modules/itc-2480/pages/lab5.adoc
+++ b/franske-course-information/modules/itc-2480/pages/lab5.adoc
@@ -136,7 +136,7 @@ You would then need to restart networkd like `systemctl restart systemd-networkd
 == Install and Configure PHP-FPM to Serve PHP Webpages Through Nginx
 . There are many times when you want to serve a dynamic web page rather than a static one. A common use for this is to run some kind of web application instead of just delivering fixed web pages. This could be anything from content management or blog software, to a photo gallery, database application, discussion forums, or many other web applications. All of these types of web applications need to execute at least some code on the web _server_ itself instead of just in the web _browser_ on the client computer. While almost any programming language can be used to make a web application one of the most popular historically, and one that really grew up along with the web is PHP. In fact, the name PHP stands for PHP Hypertext Preprocessor. With hypertext being a part of HTML (hypertext markup language). So, it is really designed to modify hypertext before it is sent out from the webserver.
 . Because Nginx is desinged to be a very efficient web server it does not include a lot of extra code that all users may not want, such as support for PHP. This is one way that it is different than the Apache webserver. Instead, Nginx is designed to call on other programs that should process certain types of files that you designate and then can take the output from those programs and deliver it to client web browsers. So, in order to process dynamic PHP files we need some kind of program to sit between Nginx and PHP. There are a few different ways to set this up but the most popular way today is to use a piece of software called *php-fpm* which allows PHP to execute the PHP files and return the data (usually as HTML code) to Nginx where it can be sent on to the client web browser that requested the page.
-. Install the *php-fpm* package on your Linux server using the appropriate *apt* command. Pay attention to the version number of PHP that gets installed on your system, you'll need to know it later.
+. Install the _php-fpm_ package on your Linux server using the appropriate `apt` command. Pay attention to the version number of PHP that gets installed on your system, you'll need to know it later.
 . Now that we have the software installed we need to configure Nginx to send requests for PHP files to the php-fpm software instead of just sending the requested PHP file to the client web browser. When you only have one web site on a server (it is possible to have multiple web sites on the same server using a technique called VirtualHosts) the configuration for Nginx is stored in the _/etc/nginx/sites-available/default_ file. Like most Linux configuration files it is a text file so you'll want to open it in a text editor.
 . In Nginx configuration files (and many different Linux configuration files) lines that start with a `\#` are considered comments (that can help you remember what different things do) and are ignored by the software. If you look at just the lines in this file that do not have a `\#` at the front you should see something like this:
 +
@@ -181,6 +181,14 @@ server {
 ----
 . First, notice that we have added `index.php` to the beginning of the index line? That will allow Nginx to use any index.php file in a directory as the default file if the web browser doesn't specify some other specific file.
 . Second, we have added that special new `location ~ \.php$` block which will handle all files ending in .php. All of the details that are in this block are outside the scope of this introductory server administration course, but note that the line `fastcgi_pass unix:/run/php/php8.2-fpm.sock;` includes the socket file location we found in the php-fpm configuration file. Note that you will need to modify this line based on the exact name of your own php-fpm socket file and that the line must end with a `;` or you will have an error in your configuration that will prevent Nginx from loading.
+. One of the ways Nginx provides for checking your configuration files for errors is to run `nginx -t` as the root user. While this may not catch everything that could go wrong (such as a mistake in the location of the socket file). It will catch things that would prevent the Nginx server from starting at all. Output from this command should look similar to the output below if things are correct and is a good way to do a basic check before applying the configuration changes.
++
+[source,console]
+----
+root@2480-Z:/home/ben# nginx -t
+nginx: the configuration file /etc/nginx/nginx.conf syntax is ok
+nginx: configuration file /etc/nginx/nginx.conf test is successful
+----
 . Restart the Nginx server software to apply the configuration changes using the `systemctl restart nginx` command. You can check to make sure there were no errors in the configuration that prevented Nginx from restarting by using the `systemctl status nginx` command and checking the output to ensure it says `Active: active (running)`. It would also be a good idea to make sure that the web browser on your administrative PC can still access your Linux server web site.
 . Once you are sure that Nginx has started properly and is serving pages create a new file named _phptest.php_ in _/var/www/html_ with a text editor. Put the following code into that file:
 +
