--- a/franske-course-information/modules/itc-2480/pages/lab6.adoc
+++ b/franske-course-information/modules/itc-2480/pages/lab6.adoc
@@ -312,3 +312,5 @@ image::lab06/012.png[Sample query in Beekeeper Studio,250,align=left,link=self]
 . If you are using the Administrative PC in Netlab instead of your own computer as the administrative computer you should also shut down that system in the usual way each time you are done with the Netlab system and then end your Netlab Reservation. You should do these steps each time you finish using the adminsitrative PC in future labs as well.
 
 NOTE: You can keep your Linux Server running, you do not need to shut it down.
+
+include::program-info:ROOT:partial$stdfooter.adoc[]
