finish 2480 lab 6 instructions

--- a/franske-course-information/modules/itc-2480/pages/lab6.adoc
+++ b/franske-course-information/modules/itc-2480/pages/lab6.adoc
@@ -294,13 +294,17 @@ image::lab06/012.png[Sample query in Beekeeper Studio,250,align=left,link=self]
 . Now let's see how we can combine our web server running PHP and a database system to run one of the most popular web applications on servers. https://wordpress.org/[_Wordpress_] is a _content management system_ which was originally desinged as blogging software but now runs millions of websites of all kinds and allows people without HTML experience to write content, run web stores, and other activities which can have a template desinged by an HTML designer applied to them automatically creating an easy to use website.
 . Start by using `wget` to download the file https://wordpress.org/latest.tar.gz onto your Linux server
 . Next, review the very well written https://developer.wordpress.org/advanced-administration/before-install/howto-install/[Wordpress Installation Guide] which contains both basic and detailed instructions.
-. You goal is to install Wordpress in such a way that it is accessed by going to http://172.17.xx.xx/blog (obviously with your own server's IP address). In other words it should not be the main page of your web server but need the /blog on the end of the URL.
-. Once you have Wordpress installed be sure to log in to the admin interface through your web browser http://172.17.xx.xx/blog/admin and pick a theme and create a few short blog posts to make sure they show up and everything is working correctly.
+. You goal is to install Wordpress in such a way that it is accessed by going to http://172.17.xx.xx/blog (obviously with your own server's IP address). In other words it should not be the main page of your web server but need the /blog on the end of the URL. An example of a working front page is:
++
+image::lab06/016.png[Wordpress working front page,250,align=left,link=self]
+. Once you have completed the Wordpress installation be sure to log in to the admin interface through your web browser http://172.17.xx.xx/blog/wp-admin and pick a theme and create a few short blog posts to make sure they show up and everything is working correctly. An example of the Wordpess administrative interface:
++
+image::lab06/018.png[Wordpress administrative dashboard,250,align=left,link=self]
 . Here are a few hints, tips, and guidance that may assist you in combination with the official installation instructions.
 .. You will need to download and untar the Wordpress software.
 .. You will need to move the Wordpress files that you unpacked to the correct location on your server's filesystem. The name of the directory you put them in will be important. Remember you want the software to work when users visit http://172.17.xx.xx/blog
 .. You will need to create a new MariaDB database, a MariaDB user/password, and give that user permissions to work in the database. Be sure to write down the database name, username, and password you create.
-.. You _may_ need to create a copy of the _wp-config-sample.php_ Wordpress configuration file and edit the file to put in your hostname (localhost), database name, database username, and password.
+.. You _may_ need to create a copy of the _wp-config-sample.php_ Wordpress configuration file and edit the file to put in your hostname (localhost), database name, database username, and password. Whether you need to do this depends on if the installation wizard works for you.
 .. You will need to make sure that the directory containing all your Wordpress files and all the files and subdirectories inside it are owned by the www-data user and group.
 .. The first time you access your Wordpress site from a browser it will run through an installation wizard where you will pick an administrative username and password for the Wordpress administration pages. Be sure to write these down so you can login!
 . There are many other PHP web applications including discussion forums, photo sharing, web stores, etc. that can be installed on a web server with PHP and a database just like Wordpress. They mostly all install in a similar way (creating a database, database user, copying files, editing a configuration file) though there are some small variations and the instructions are often not quite as good as Wordpress has. If you're interested you should be able to find plenty of free open-source PHP applications by searching for them online. Do note that PHP web applications frequently have security bugs that are found and so if you run one on the public internet it's very important to keep it up to date or your server could be compromised!
